proofs/map/map_style.css
*{
    padding: 0;
    margin: 0;
}

div{
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}


 body{
    font-family: "Arial, Helvetica, sans-serif,sans-serif";
}



    #container{
            
    }

    #map-wrap{
        position: left;
        width: 70%;
        background: gray;
        height: 100%;
        bottom: 100%;
        z-index: 1;
    }

        #map{
            color: red;
            border: silver 1px dotted;
            width: 700px;
            height: 500px;
            margin: auto;
            /*important to keep hero in place*/
            position: relative;
            /*text-align: center;*/
        }

            #map_background{
                width: 694px;
                height: 100px;
                background: blue;
            }

            .tile{
                float: left;
                background-color: green;
                width: 138px;
                height: 98px;
                margin: 0 1px 1px 0; 
                position: relative;
            }
            
            .tile .active{
                background-color: rgba(0,200,50,0.7);
            }

            .hero{
                position: absolute;
                top:50px;
                left:10px;
                height: 100px;
                width: 100px;
                background: rgba(100,100,100,0.8);
                border-radius: 10px;
            }
            
        #panel_wrap{
            position: fixed;
            right: 0;
            top:0;
            width: 30%;
            min-width: 350px;
            background: silver;
            border-left: blue 5px inset;
            overflow: hidden;
            height: 100%;
            z-index: 10;
        }

            .slect_hero {
                position: absolute;
                width: 30px;
                height: 200px;
                top: 48px;
                margin-left: 10%;
                border: thin solid black;
            }

            .positioning {
                position: absolute;
                margin-left: 81%;
            }

            #hero_avatar{
                width: 200px;
                height: 200px;
                margin: auto;
                border: thin solid;
            }

            #panel_wrap h2{
                text-align: center;
                margin-top: 20px;
                margin-bottom: 0px;

            }

            .attack_button{
                width: 90%;
                min-width: 300px;
                height: 30px;
                margin: auto;
                margin-bottom: 5px;
                background: linear-gradient(to bottom, #b7deed 0%,#71ceef 50%,#21b4e2 51%,#b7deed 100%); /* W3C */
                background: #b7deed; /* Old browsers */
                background: -moz-linear-gradient(top, #b7deed 0%, #71ceef 50%, #21b4e2 51%, #b7deed 100%); /* FF3.6+ */
                background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b7deed), color-stop(50%,#71ceef), color-stop(51%,#21b4e2), color-stop(100%,#b7deed)); /* Chrome,Safari4+ */
                background: -webkit-linear-gradient(top, #b7deed 0%,#71ceef 50%,#21b4e2 51%,#b7deed 100%); /* Chrome10+,Safari5.1+ */
                background: -o-linear-gradient(top, #b7deed 0%,#71ceef 50%,#21b4e2 51%,#b7deed 100%); /* Opera 11.10+ */
                background: -ms-linear-gradient(top, #b7deed 0%,#71ceef 50%,#21b4e2 51%,#b7deed 100%); /* IE10+ */
                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b7deed', endColorstr='#b7deed',GradientType=0 ); /* IE6-9 */

                /* Rounded Corners */
                border-radius: 10px; 
                -moz-border-radius: 10px; 
                -webkit-border-radius: 10px; 
            }


                .attack_button span:first-child{
                    float: left;
                    margin: 0% 0% 0 10%;
                }

                .attack_button span:last-child{
                    float: right;
                    margin: 0% 10% 0 10%;
                }

                .attack_button:hover{
                    background: #ffb76b; /* Old browsers */
                    background: -moz-linear-gradient(top, #ffb76b 0%, #ffa73d 50%, #ff7c00 51%, #ff7f04 100%); /* FF3.6+ */
                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffb76b), color-stop(50%,#ffa73d), color-stop(51%,#ff7c00), color-stop(100%,#ff7f04)); /* Chrome,Safari4+ */
                    background: -webkit-linear-gradient(top, #ffb76b 0%,#ffa73d 50%,#ff7c00 51%,#ff7f04 100%); /* Chrome10+,Safari5.1+ */
                    background: -o-linear-gradient(top, #ffb76b 0%,#ffa73d 50%,#ff7c00 51%,#ff7f04 100%); /* Opera 11.10+ */
                    background: -ms-linear-gradient(top, #ffb76b 0%,#ffa73d 50%,#ff7c00 51%,#ff7f04 100%); /* IE10+ */
                    background: linear-gradient(to bottom, #ffb76b 0%,#ffa73d 50%,#ff7c00 51%,#ff7f04 100%); /* W3C */
                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb76b', endColorstr='#ff7f04',GradientType=0 ); /* IE6-9 */
                }

                .attack_button:active{
                    color: orange;
                        background: #fefcea; /* Old browsers */
                        background: -moz-linear-gradient(top,  #fefcea 0%, #f1da36 100%); /* FF3.6+ */
                        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefcea), color-stop(100%,#f1da36)); /* Chrome,Safari4+ */
                        background: -webkit-linear-gradient(top,  #fefcea 0%,#f1da36 100%); /* Chrome10+,Safari5.1+ */
                        background: -o-linear-gradient(top,  #fefcea 0%,#f1da36 100%); /* Opera 11.10+ */
                        background: -ms-linear-gradient(top,  #fefcea 0%,#f1da36 100%); /* IE10+ */
                        background: linear-gradient(to bottom,  #fefcea 0%,#f1da36 100%); /* W3C */
                        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=0 ); /* IE6-9 */

                }

            #gauge_bar{
                width: 90%;
                height: 60px;
                margin: auto;
               /* border: thin solid black;*/
            }

                .gauge_bar_unit{
                    float: left;
                    width: 16%;
                    height: 50%;
                    margin: 0px 0px 0px 2px;
                        background: #9dd53a; /* Old browsers */
                        background: -moz-linear-gradient(top,  #9dd53a 0%, #a1d54f 50%, #80c217 51%, #7cbc0a 100%); /* FF3.6+ */
                        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#9dd53a), color-stop(50%,#a1d54f), color-stop(51%,#80c217), color-stop(100%,#7cbc0a)); /* Chrome,Safari4+ */
                        background: -webkit-linear-gradient(top,  #9dd53a 0%,#a1d54f 50%,#80c217 51%,#7cbc0a 100%); /* Chrome10+,Safari5.1+ */
                        background: -o-linear-gradient(top,  #9dd53a 0%,#a1d54f 50%,#80c217 51%,#7cbc0a 100%); /* Opera 11.10+ */
                        background: -ms-linear-gradient(top,  #9dd53a 0%,#a1d54f 50%,#80c217 51%,#7cbc0a 100%); /* IE10+ */
                        background: linear-gradient(to bottom,  #9dd53a 0%,#a1d54f 50%,#80c217 51%,#7cbc0a 100%); /* W3C */
                        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9dd53a', endColorstr='#7cbc0a',GradientType=0 ); /* IE6-9 */
                        border: thin solid #1d8800;

                }

                .empty_gauge_unit {
                    background: #cedce7; /* Old browsers */
                    background: -moz-linear-gradient(top,  #cedce7 0%, #596a72 100%); /* FF3.6+ */
                    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cedce7), color-stop(100%,#596a72)); /* Chrome,Safari4+ */
                    background: -webkit-linear-gradient(top,  #cedce7 0%,#596a72 100%); /* Chrome10+,Safari5.1+ */
                    background: -o-linear-gradient(top,  #cedce7 0%,#596a72 100%); /* Opera 11.10+ */
                    background: -ms-linear-gradient(top,  #cedce7 0%,#596a72 100%); /* IE10+ */
                    background: linear-gradient(to bottom,  #cedce7 0%,#596a72 100%); /* W3C */
                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=0 ); /* IE6-9 */
                    border: thin solid #666;

                }
            
            /* UTILS */
            .clear{
                clear:both;
            }
            .full{
                position: absolute;
                top: 0;
                left:0;
                bottom:0;
                right: 0;
            }

